--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,24 @@ export_presets.cfg
 .mono/
 data_*/
 
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+# Visual Studio Files
+Debug
+Release
+*.suo
+*.csproj.user
+*.vbproj.user
+ipch
+*sdf
