--- a/Src/LudumDare46/LudumDare46.vcxproj
+++ b/Src/LudumDare46/LudumDare46.vcxproj
@@ -149,10 +149,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GodotLibrary.cpp" />
+    <ClCompile Include="Planet.cpp" />
+    <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Root.cpp" />
     <ClCompile Include="PlayerTest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Planet.h" />
+    <ClInclude Include="PlayerController.h" />
     <ClInclude Include="PlayerTest.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
