--- a/Src/LudumDare46/LudumDare46.vcxproj.filters
+++ b/Src/LudumDare46/LudumDare46.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="GameManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Meteorite.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerTest.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Meteorite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
