--- a/Src/LudumDare46/LudumDare46.vcxproj.filters
+++ b/Src/LudumDare46/LudumDare46.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Meteorite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="MeteoriteSpawner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Meteorite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MeteoriteSpawner.h">
