Create MeteoriteSpawner Class and tscn

--- a/Src/LudumDare46/LudumDare46.vcxproj.filters
+++ b/Src/LudumDare46/LudumDare46.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Meteorite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeteoriteSpawner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerTest.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Meteorite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MeteoriteSpawner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
