--- a/Src/LudumDare46/LudumDare46.vcxproj
+++ b/Src/LudumDare46/LudumDare46.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{16A83F88-957E-4335-A95E-40BB503E8A88}</ProjectGuid>
     <RootNamespace>LudumDare46</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,7 +41,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -151,6 +151,7 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GodotLibrary.cpp" />
     <ClCompile Include="Meteorite.cpp" />
+    <ClCompile Include="MeteoriteSpawner.cpp" />
     <ClCompile Include="Planet.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Root.cpp" />
@@ -159,6 +160,7 @@
   <ItemGroup>
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Meteorite.h" />
+    <ClInclude Include="MeteoriteSpawner.h" />
     <ClInclude Include="Planet.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="PlayerTest.h" />
