--- a/Src/LudumDare46/LudumDare46.vcxproj.filters
+++ b/Src/LudumDare46/LudumDare46.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="MeteoriteSpawner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CameraBehaviour.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerController.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MeteoriteSpawner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraBehaviour.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
