--- a/Src/LudumDare46/LudumDare46.vcxproj
+++ b/Src/LudumDare46/LudumDare46.vcxproj
@@ -149,6 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bar.cpp" />
+    <ClCompile Include="CameraBehaviour.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GodotLibrary.cpp" />
     <ClCompile Include="Meteorite.cpp" />
@@ -158,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bar.h" />
+    <ClInclude Include="CameraBehaviour.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Meteorite.h" />
     <ClInclude Include="MeteoriteSpawner.h" />
